Bug 160867 - Hyperlinks of text / objects inside frames doesn't export to HTML
Summary: Hyperlinks of text / objects inside frames doesn't export to HTML
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0
Keywords: filter:html
Depends on:
Blocks: Hyperlink
  Show dependency treegraph
 
Reported: 2024-04-30 10:16 UTC by Mike Kaganski
Modified: 2024-05-07 06:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Images and text with hyperlinks, outside and inside a frame (2.80 KB, application/vnd.oasis.opendocument.text)
2024-04-30 10:16 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-04-30 10:16:34 UTC
Created attachment 193904 [details]
Images and text with hyperlinks, outside and inside a frame

Open the attachment. It contains two similar parts: a paragraph with an as-char image with an hyperlink, and some text with an hyperlink. The second such part is additionally inside an as-char frame.

Save as -> HTML. Open the resulting HTML, and see that the URLs are there in the first part. The second part, inside a frame, is exported as a single image displaying the entire frame content; and it has no hyperlinks.

It is desirable to export the inner hyperlinks as an image map.
Comment 1 Mike Kaganski 2024-04-30 10:58:01 UTC
https://gerrit.libreoffice.org/c/core/+/166924
Comment 2 Stéphane Guillou (stragu) 2024-04-30 14:39:35 UTC
Repro in:

Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2024-04-30 17:12:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/acbb6c98ae1335da5aca4f1a55de5f3ae35a5d02

tdf#160867: restore HTML map export for text hyperlinks in frames

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-05-01 05:00:16 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/42876f0a99e2ae7cb7529dd7fb4d94c5e9298b21

tdf#160867: export as-char frames' hyperlinks to image map

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-05-01 10:13:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/96eabc69e9c3c6e9c944a4e83adddea44d48c621

tdf#160867: only output first element of the map in ReqIF case

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2024-05-07 06:12:50 UTC
Thanks Mike, verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7a895ec4205659038aa95941b65715fed1a3e7be
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Exported to HTML and opened in Firefox.